# backend_monitoreo_bovinos_ia

./: .gitignore  DEPLOY_RENDER.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.py
app/: __init__.py  main.py
app/config/: database.py  settings.py
app/controllers/: __init__.py  auth_controller.py  bovino_controller.py  finca_controller.py  image_controller.py  medicion_controller.py
app/core/: __init__.py  startup.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  auth_models.py  bovino.py  common.py  finca.py  medicion.py  resolver.py  resolver_models.py
app/services/: auth_service.py  bovino_service.py  finca_service.py  image_service.py  medicion_service.py
app/utils/: json_encoder.py
app/views/: __init__.py  api.py  api_router.py  auth_views.py  bovino_views.py  finca_views.py  image_views.py  medicion_views.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_complete_workflow.py
tests/integration/: __init__.py  test_api.py  test_database.py
tests/unit/: __init__.py  test_config.py  test_models.py
